// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render error alert pane 1`] = `
<div>
  <div>
    <div
      class="alertContainer"
      data-testid="alert"
    >
      <div
        class="MuiTypography-root MuiTypography-body1 MuiPaper-root MuiPaper-elevation6 MuiSnackbarContent-root error flat alert-error"
        role="alertdialog"
      >
        <div
          class="MuiSnackbarContent-message"
        >
          <span>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root alertIcon"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
              />
            </svg>
            Test error
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render info alert pane 1`] = `
<div>
  <div>
    <div
      class="alertContainer"
      data-testid="alert"
    >
      <div
        class="MuiTypography-root MuiTypography-body1 MuiPaper-root MuiPaper-elevation6 MuiSnackbarContent-root info alert-info"
        role="alertdialog"
      >
        <div
          class="MuiSnackbarContent-message"
        >
          <span>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root alertIcon"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
            Test info
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render success alert pane 1`] = `
<div>
  <div>
    <div
      class="alertContainer"
      data-testid="alert"
    >
      <div
        class="MuiTypography-root MuiTypography-body1 MuiPaper-root MuiPaper-elevation6 MuiSnackbarContent-root success alert-success"
        role="alertdialog"
      >
        <div
          class="MuiSnackbarContent-message"
        >
          <span>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root alertIcon"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              />
            </svg>
            Test success
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render warning alert pane 1`] = `
<div>
  <div>
    <div
      class="alertContainer"
      data-testid="alert"
    >
      <div
        class="MuiTypography-root MuiTypography-body1 MuiPaper-root MuiPaper-elevation6 MuiSnackbarContent-root warning flat alert-warning"
        role="alertdialog"
      >
        <div
          class="MuiSnackbarContent-message"
        >
          <span>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root alertIcon"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
              />
            </svg>
            Test warning
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
